import "client.comm.proto";
package client;

enum TERRAIN_LIST_METHOD_E           
{                                   
    TLME_ADD    = 1; // 新增加      
    TLME_UPDATE = 2; // 更新        
    TLME_DELETE = 3; // 删除        
}

message point {
    required uint32 x = 1[default = 0];
    required uint32 y = 2[default = 0];
}

// a  b
// c  d
message rectangle {
    required point a = 1;
    required point b = 2;
    required point c = 3;
    required point d = 4;
}

message terrain_info
{
    required uint32    terrain_id      = 1;
    required uint32    effect_id       = 2; // 效果
    required rectangle rect            = 3; // 形状
    required uint32    start_time      = 4; // 时间
    required uint32    end_time        = 5;
    required role_data rd              = 6; // 施法方
    repeated uint32    trigger_effects = 7; // 触发额外效果
}

message terrain_operate_info
{
    required TERRAIN_LIST_METHOD_E method = 1; // 操作方法
    required terrain_info          ti     = 2; // buffer数据
}                              

message terrain_list{
    repeated terrain_operate_info toi = 1; // 地形列表
}